--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <nav>
         <ul>
             <li>Nadia's Portfolio</li>
-            <li><a href="https://www.linkedin.com/in/nadiahawa/">LinkedIn</a></li></li>
-            <li><a href="https://aoj.amegroups.com/article/view/6129/pdf">Article</a></li>
-            <li><a href="https://vcuwomensrugby.weebly.com/">Rugby Website</a> </li>
-            <li><a href="page3.html">Link 3</a> </li>
-            <li><a href="https://www.google.com/">Help</a></li>
+            <li><a target="_blank" class="linky" href="https://www.linkedin.com/in/nadiahawa/">LinkedIn</a></li></li>
+            <li><a target="_blank" class="linky" href="https://aoj.amegroups.com/article/view/6129/pdf">Article</a></li>
+            <li><a target="_blank" class="linky" href="https://vcuwomensrugby.weebly.com/">Rugby Website</a> </li>
+            <li><a target="_blank" class="linky" href="https://www.google.com/">Biggest Coding Tutor</a></li>
         </ul>
     </nav>
     <div class= "hero-image">
@@ -25,28 +24,32 @@
         </div>
     </div>
     <main>
+        <div class="major">
         <div id="main">
             <article class="main-articles">
-                <h1>Professional/Educational Background</h1>
-                <img src="images/psych.jfif" width="200" height="200" align="left"/>
+                <div class="headings"><h1>Professional/Educational Background</h1></div>
+                <img class="jpeg" src="images/psych.jfif" width="200" height="200" align="left"/>
                 <strong><small>Bulleted list of my background in Psych, Neurology, and Healthcare.</small>
+                <aside class="texts">
                     <p>
                         <ul>
                             <li>Graduated Virginia Commonwealth University (VCU) in 2019.</li>
-                            <li>Started research as an RA for a Social Psychoogy and Neuroscience lab.</li>
+                            <li>Started research as an RA for a Social Psychology and Neuroscience lab.</li>
                             <li>Continued research, going into and FDA study for concussion clinical trials at sports medicine clinic.</li>
                             <li>Transitioned into more back-ended research coordination with a children's hospital for a year and a half.</li>
                             <li>Then decided that I wanted to try more hands on clinical work (post-pandemic as crazy as that sounds)
                                 and became a Neurodiagnostic Technician at Georgetown Universiy Hospital.
                             </li>
-                        </ul>Despite all these changes, I look forward to being able to learn something completely new, challenging, and hopefully rewarding in the end! My interest in the unknown was a motivating factor to persuing Neurology and psychology so heavily. I believe that curiosity is what will drive me to want to know more as I learn to program.
+                        </ul>Despite all these changes, I look forward to being able to learn something completely new, challenging, and hopefully rewarding in the end! My interest in the unknown was a motivating factor to persuing Neurology and psychology so heavily. I believe that curiosity is what 
+                        will drive me to want to know more as I learn to program.</p>
+                        </aside>
                 </strong>
             </article>
             <article class="main-articles">
-                <h1>Hobbies</h1>
-                <img class= "bike" src="images/bike.jpg" alt= "Proof of Biking" width="200" height="200"/>
+                <div class="headings"><h1>Hobbies</h1></div>
+                <img class="jpeg" src="images/bike.jpg" alt= "Proof of Biking" width="200" height="200"/>
                 <strong><small>Things I'll get back to after June 24th, 2022</small>
-                   
+                    <aside class="texts">
                     <p>In my spare time I like to partake in a lot of different hobbies. My background in sports definelty is at the forefront of many of my interests like rugby, running, biking, hiking, and playing extreme tug of war with my 2 year old dog Laika. Aside from all of those things, I also enoy cooking all different types of foods. I also worked at a bakery for 6 years and have absolulet no baking skills. 
                         Traveling is something I love to do more than anything, but with the pandemic and enrolling in a intensive coding bootcamp I'll have to 
                         put that hobbie on hold for a few months. Playing videogames is a more recent interests that I've come to 
@@ -54,11 +57,15 @@
                         attempt to play competatively. Meeting new people, and hearing about their lives or interests is something 
                         I really like to do as well.
                 </p>
+                </aside>
                 </strong>
             </article>
             <article class="main-articles">
-                <h1>Goals for this Program</h1>
+                <div class="headings"><h1>Goals for this Program
+                    <img class="jpeg" src="images/laika.jpg" >
+                </h1></div>
                 <strong><small>Longterm + Short term Goals</small>
+                    <aside class="texts">
                     <p>
                         <ul>Short Term: 
                                 <li>Complete all assignments and projects to the best of my ability.</li>
@@ -68,20 +75,21 @@
                                 <li>Build a real portfolio to use in the future.</li>
                         </ul>
                         <br>
-                        <img class="laikaimg" src="images/laika.jpg" >
                           <ul>Long Term: 
                             <li>Be able to feel confident in my abilities as a fullstack developer. </li>
                             <li>Launch a new career in the tech industy.</li>
                             <li>Pave a road for an exciting career shift that could lead me to many different ventures in my career and life.</li>
                         </ul> 
                 </p>
+            </aside>
                 </strong>
             </article>
 
         </div>
+    </div>
     <div id="side">
         <article class="side-articles" id ="profile">
-            <img id="profile-image" src="images/rugby.jpg" width="100" height="100">
+            <img class="side-jpeg" src="images/rugby.jpg" width="100" height="100">
             <div id="profile-details"><h2>Nadia Hawa</h2>
             <ul>
                 <li>Dog Enthusist
@@ -101,7 +109,7 @@
                         <li>Loves sour beers</li>
                         <li>Looking to move to New York</li>
                         <li>Speaks broken Arabic</li>
-                        <img src="images/meme.jpg"/>
+                        <img class="side-jpeg" src="images/meme.jpg"/>
                     </ul>Actual picture of me when my code doesn't work.</small>
                     <p>
                     </p></strong>
